--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-blinker==1.9.0
-click==8.2.1
-Flask==3.1.2
-flask-cors==6.0.1
-gunicorn==23.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-packaging==25.0
-Werkzeug==3.1.3
+fastapi==0.115.6
+uvicorn==0.34.0
+pydantic==2.10.3
 yt-dlp==2025.8.27
+python-multipart==0.0.20
