--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     container_name: justdownloads4u-api
     ports:
-      - "3000:3000"
+      - "8080:8080"
     volumes:
       # Mount temp directory for persistent downloads (optional)
       - ./temp:/app/temp
@@ -16,10 +16,6 @@ services:
       # - ./models.py:/app/models.py
     environment:
       - PYTHONUNBUFFERED=1
+      - PYTHONDONTWRITEBYTECODE=1
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/docs"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+    # Healthcheck is now defined in the Dockerfile
